# guideline-rag-langgraph

./: .env.example  .gitignore  EVALUATION_RUBRIC.md  README.md  config.py  evaluate.py  generate_graph.py  ingest.py  logger.py  prepare_eval_dataset.py  pyproject.toml  query.py
data/: README.md  eval_results.json  eval_results_v2_chunk1024.json  test_questions.json  test_questions.md
graph/: edges.py  graph.py  nodes.py  state.py
tests/: test_edges.py
